[gd_scene load_steps=3 format=3 uid="uid://k8uke8emce8o"]

[ext_resource type="Script" path="res://scenes/multiplayer_menu.gd" id="1_xxxxx"]
[ext_resource type="FontFile" uid="uid://cbbtarn8l2yhf" path="res://scripts/VT323-Regular.ttf" id="2_xxxxx"]

[node name="MultiplayerMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xxxxx")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Title" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_xxxxx")
theme_override_font_sizes/font_size = 64
text = "Multiplayer"
horizontal_alignment = 1

[node name="HostButton" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_xxxxx")
theme_override_font_sizes/font_size = 32
text = "Host Game"

[node name="JoinButton" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_xxxxx")
theme_override_font_sizes/font_size = 32
text = "Join Game"

[node name="CodeInput" type="LineEdit" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_xxxxx")
theme_override_font_sizes/font_size = 32
placeholder_text = "Enter join code"

[node name="BackButton" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_xxxxx")
theme_override_font_sizes/font_size = 32
text = "Back to Main Menu"
